--- a/poeme.html
+++ b/poeme.html
@@ -20,24 +20,30 @@
 			<p style="font-family: Courier New, monospace;">Source:</b><a target="_blank" href="https://medium.com/@EmEmbarty/31-of-the-best-and-most-famous-short-classic-poems-of-all-time-e445986e6dfu">Medium - Still I Rise par Maya Angelou</a></p>
 		</center>
 		<table>
-			<div class="joli">
-				<center>
-				<h3> “Still I Rise” </h3>
-					You may write me down in history<br>With your bitter, twisted lies,<br>You may tread me in the very dirt
-					<br>But still, like dust, I’ll rise.<br>Does my sassiness upset you?<br>Why are you beset with gloom?
-					<br>’Cause I walk like I’ve got oil wells<br>Pumping in my living room.<br>Just like moons and like suns,
-					<br>With the certainty of tides,<br>Just like hopes springing high,<br>Still I’ll rise.<br>Did you want to see me broken?
-					<br>Bowed head and lowered eyes?<br>Shoulders falling down like teardrops.<br>Weakened by my soulful cries.
-					<br>Dos my haughtiness offend you?<br>Don’t you take it awful hard<br>’Cause I laugh like I’ve got gold mines
-					<br>Diggin’ in my own back yard.<br>You may shoot me with your words,<br>You may cut me with your eyes,
-					<br>You may kill me with your hatefulness,<br>But still, like air, I’ll rise.<br>Does my sexiness upset you?
-					<br>Does it come as a surprise<br>That I dance like I’ve got diamonds<br>At the meeting of my thighs?
-					<br>Out of the huts of history’s shame<br>I rise<br>Up from a past that’s rooted in pain<br>I rise
-					<br>I’m a black ocean, leaping and wide,<br>Welling and swelling I bear in the tide.<br>Leaving behind nights of terror and fear
-					<br>I rise<br>Into a daybreak that’s wondrously clear<br>I rise<br>Bringing the gifts that my ancestors gave,
-					<br>I am the dream and the hope of the slave.<br>I rise<br>I rise<br>I rise.
-					<p><i>—Maya Angelou</i></p>
-				</center>
-			</div>
+			<tr>
+				<td>
+					<div class="joli">
+						<center>
+							<h3> “Still I Rise” </h3>
+							You may write me down in history<br>With your bitter, twisted lies,<br>You may tread me in the very dirt
+							<br>But still, like dust, I’ll rise.<br>Does my sassiness upset you?<br>Why are you beset with gloom?
+							<br>’Cause I walk like I’ve got oil wells<br>Pumping in my living room.<br>Just like moons and like suns,
+							<br>With the certainty of tides,<br>Just like hopes springing high,<br>Still I’ll rise.<br>Did you want to see me broken?
+							<br>Bowed head and lowered eyes?<br>Shoulders falling down like teardrops.<br>Weakened by my soulful cries.
+							<br>Dos my haughtiness offend you?<br>Don’t you take it awful hard<br>’Cause I laugh like I’ve got gold mines
+							<br>Diggin’ in my own back yard.<br>You may shoot me with your words,<br>You may cut me with your eyes,
+							<br>You may kill me with your hatefulness,<br>But still, like air, I’ll rise.<br>Does my sexiness upset you?
+							<br>Does it come as a surprise<br>That I dance like I’ve got diamonds<br>At the meeting of my thighs?
+							<br>Out of the huts of history’s shame<br>I rise<br>Up from a past that’s rooted in pain<br>I rise
+							<br>I’m a black ocean, leaping and wide,<br>Welling and swelling I bear in the tide.<br>Leaving behind nights of terror and fear
+							<br>I rise<br>Into a daybreak that’s wondrously clear<br>I rise<br>Bringing the gifts that my ancestors gave,
+							<br>I am the dream and the hope of the slave.<br>I rise<br>I rise<br>I rise.
+							<p><i>—Maya Angelou</i></p>
+						</center>
+					</div>
+				</td>
+				<td>
+					<img src="images/ma.jpg" alt="Still I Rise - Maya Angelou" width="200"/>
 		</table>
+
 	</body>
