--- a/poeme.html
+++ b/poeme.html
@@ -25,7 +25,7 @@
 					<img src="images/ma.jpg" alt="Still I Rise - Maya Angelou" width="200"/>
 				</td>
 				<td>
-					<div class="joli">
+					<div class="joli" style="text-align: center;">
 						<h3> “Still I Rise” </h3>
 						You may write me down in history<br>With your bitter, twisted lies,<br>You may tread me in the very dirt
 						<br>But still, like dust, I’ll rise.<br>Does my sassiness upset you?<br>Why are you beset with gloom?
@@ -46,6 +46,7 @@
 			</tr>
 		</table>
 	</body>
+
 
 
 
