--- a/poeme.html
+++ b/poeme.html
@@ -19,7 +19,7 @@
 			<h1>POÈME</h1>
 			<p style="font-family: Courier New, monospace;">Source:</b><a target="_blank" href="https://medium.com/@EmEmbarty/31-of-the-best-and-most-famous-short-classic-poems-of-all-time-e445986e6dfu">Medium - Still I Rise par Maya Angelou</a></p>
 		</center>
-		<table class="centered-table">
+		<table>
 			<tr>
 				<td>
 					<img src="images/ma.jpg" alt="Still I Rise - Maya Angelou" width="200"/>
@@ -47,4 +47,5 @@
 		</table>
 	</body>
 </html>
+
 
