--- a/poeme.html
+++ b/poeme.html
@@ -22,7 +22,7 @@
 		<table>
 			<tr>
 				<td>
-					<img src="images/ma.jpg" alt="Still I Rise - Maya Angelou" width="200"/>
+					<img src="images/ma.jpg" alt="Still I Rise - Maya Angelou" width="200"/> <!--https://tokillabloggingbird96286054.wordpress.com/2018/11/27/still-i-rise/-->
 				</td>
 				<td>
 					<div class="joli" style="text-align: center;">
@@ -47,6 +47,7 @@
 		</table>
 	</body>
 </html>
+
 
 
 
