--- a/poeme.html
+++ b/poeme.html
@@ -3,17 +3,17 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Poeme</title>
-		<link rel="stylesheet" href="css/poemestyle.css">	
+		<link rel="stylesheet" href="poemestyle.css">	
 	</head>
 	<body>
 		<center><h1><b>Cours ICS3U - Génie informatique</b></h1></center>
 		<center><h2>Mon portfolio web<h2></center>
 		<center><p style="font-size: 18 px;">MES PAGES HTML:</p></center> <!-- Source: https://www.w3schools.com/tags/tag_font.asp -->
-		<ul>
-			<li><a target="_blank" href="poeme.html">POÈME</a>
-			<li><a target="_blank" href="voyage.html">VOYAGE DE RÊVE</a>
-			<li><a target="_blank" href="biographie.html">BIOGRAPHIE</a>
-		</ul>
+  	<ul>
+  		<li><a target="_blank" href="poeme.html">POÈME</a>
+  		<li><a target="_blank" href="voyage.html">VOYAGE DE RÊVE</a>
+  		<li><a target="_blank" href="biographie.html">BIOGRAPHIE</a>
+  	</ul>
 		<center>
 			<p>Bienvenu à ma page poème. Pour naviguer entre les pages, cliquez les liens si-dessu<p>
 			<h1>POÈME</h1>
@@ -25,7 +25,7 @@
 					<img src="images/ma.jpg" alt="Still I Rise - Maya Angelou" width="200"/> <!--https://tokillabloggingbird96286054.wordpress.com/2018/11/27/still-i-rise/-->
 				</td>
 				<td>
-					<div class="joli" style="text-align: center;">
+					<div class="joli" style="text-align: center">
 						<h3> “Still I Rise” </h3>
 						You may write me down in history<br>With your bitter, twisted lies,<br>You may tread me in the very dirt
 						<br>But still, like dust, I’ll rise.<br>Does my sassiness upset you?<br>Why are you beset with gloom?
@@ -47,10 +47,3 @@
 		</table>
 	</body>
 </html>
-
-
-
-
-
-
-
