--- a/voyage.html
+++ b/voyage.html
@@ -2,18 +2,23 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Mon voyage de rêve</title>
+		<title>Poeme</title>
+		<link rel="stylesheet" href="poemestyle.css">	
 	</head>
 	<body>
-		<a name="retour"></a><center><h1><b>Cours ICS3U - Génie informatique</b></h1></center>
-		<center><h3>Mon voyage parfait à Marrakech, Maroc</h3></center>
-		<ul>
-			<li><a href="#DEST">Description de la destination</a>
-			<li><a href="#SITES">Sites inéressant</a>
-			<li><a href="#Jaguar">Jaguar</a>
-			<li><a href="#Pieuvre">Pieuvre</a>
-		</ul>
+		<center><h1><b>Cours ICS3U - Génie informatique</b></h1></center>
+		<center><h2>Mon portfolio web<h2></center>
+		<center><p style="font-size: 18 px;">MES PAGES HTML:</p></center> <!-- Source: https://www.w3schools.com/tags/tag_font.asp -->
+  	<ul>
+  		<li><a target="_blank" href="poeme.html">POÈME</a>
+  		<li><a target="_blank" href="voyage.html">VOYAGE DE RÊVE</a>
+  		<li><a target="_blank" href="biographie.html">BIOGRAPHIE</a>
+  	</ul>
 		<center>
+			<p>Bienvenu à ma page poème. Pour naviguer entre les pages, cliquez les liens si-dessu<p>
+			<h1>POÈME</h1>
+			<p style="font-family: Courier New, monospace;">Source:</b><a target="_blank" href="https://medium.com/@EmEmbarty/31-of-the-best-and-most-famous-short-classic-poems-of-all-time-e445986e6dfu">Medium - Still I Rise par Maya Angelou</a></p>
+		</center>
 			<a name="DEST"><h4>DESCRIPTION</h4></a>
 			<img src="images/marrakech.jpg" alt="Marrakech" width="40%"/> <!-- https://tourscanner.fr/que-faire-voir-visiter-marrakech -->
 			<p>Marrakech, située au pied des montagnes de l’Atlas, est une ville vibrante reconnue pour ses couleurs chaudes, son architecture mauresque et son atmosphère envoûtante. Cœur historique du Maroc, elle séduit par ses souks animés, la médina classée à l’UNESCO, ses jardins luxuriants et la célèbre place Jemaa el-Fna, où traditions et modernité se rencontrent. Climat ensoleillé, artisanat raffiné et cuisine parfumée en font une destination incontournable pour une immersion culturelle unique.</p>
@@ -66,3 +71,4 @@
 	</body>
 </html>
 <!-- PAR KAITLYN NIELSEN -->
+
