--- a/voyage.html
+++ b/voyage.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Poeme</title>
+		<title>Mon voyage parfait</title>
 		<link rel="stylesheet" href="poemestyle.css">	
 	</head>
 	<body>
@@ -15,25 +15,24 @@
   		<li><a target="_blank" href="biographie.html">BIOGRAPHIE</a>
   	</ul>
 		<center>
-			<p>Bienvenu à ma page poème. Pour naviguer entre les pages, cliquez les liens si-dessu<p>
-			<h1>POÈME</h1>
+			<h1>Mon voyage parfait</h1>
 			<p style="font-family: Courier New, monospace;">Source:</b><a target="_blank" href="https://medium.com/@EmEmbarty/31-of-the-best-and-most-famous-short-classic-poems-of-all-time-e445986e6dfu">Medium - Still I Rise par Maya Angelou</a></p>
 		</center>
-			<a name="DEST"><h4>DESCRIPTION</h4></a>
+			<h4>DESCRIPTION</h4>
 			<img src="images/marrakech.jpg" alt="Marrakech" width="40%"/> <!-- https://tourscanner.fr/que-faire-voir-visiter-marrakech -->
 			<p>Marrakech, située au pied des montagnes de l’Atlas, est une ville vibrante reconnue pour ses couleurs chaudes, son architecture mauresque et son atmosphère envoûtante. Cœur historique du Maroc, elle séduit par ses souks animés, la médina classée à l’UNESCO, ses jardins luxuriants et la célèbre place Jemaa el-Fna, où traditions et modernité se rencontrent. Climat ensoleillé, artisanat raffiné et cuisine parfumée en font une destination incontournable pour une immersion culturelle unique.</p>
 			<div class="joli">
 				<p><b>Savais-tu que?</b></p>
 				<p>Marrakech possède une géographie variée, avec des montagnes de l'Atlas à proximité (comme le Toubkal), l'océan Atlantique à environ 150 km et des zones désertiques accessibles, le tout sur un relief plat. La ville est divisée entre sa médina historique et les quartiers modernes, et elle est célèbre pour sa palmeraie luxuriante et le fleuve Tensift qui traverse ses environs. </p> <!-- https://fr.wikipedia.org/wiki/Marrakech -->
 			</div>	
-			<a name="SITES"><h4>SITES À VOIR</h4></a>
+			<h4>SITES À VOIR</h4>
 				<table>
+					<th>
+						<td colspan="2"><center>Médina de Marrakech</center></td>
+					</th>
 					<tr>
-						<td><center>Médina de Marrakech</center></td>
+						<td><img src="images/medina.jpg" alt="Médina de Marrakech" width="150%"/> <!-- https://fr.tripadvisor.ca/Attraction_Review-g293734-d324126-Reviews-Medina_of_Marrakesh-Marrakech_Marrakech_Safi.html --></td>
 						<td rowspan="2">La Médina de Marrakech, inscrite au patrimoine mondial de l’UNESCO depuis 1985, est un vaste labyrinthe historique d’environ 600 hectares, datant du XIIe siècle. Elle se caratérise par une architecture unique avec ses maisons traditionnelles autour de patios (riads), ses ruelles étroites et ses souks animés où prospèrent artisans et commerçants. La médina est un vivant témoignage de l’urbanisme médiéval islamique, avec des monuments emblématiques comme la mosquée de la Koutoubia, la Kasbah, les tombeaux saâdiens, et des palais prestigieux.</td>
-					</tr>
-					<tr>
-					<td><img src="images/medina.jpg" alt="Médina de Marrakech" width="150%"/> <!-- https://fr.tripadvisor.ca/Attraction_Review-g293734-d324126-Reviews-Medina_of_Marrakesh-Marrakech_Marrakech_Safi.html --></td>
 					</tr>
 				</table>
 			<img src="images/iguane.jpg" alt="Iguane" width="40%"/>
@@ -71,4 +70,5 @@
 	</body>
 </html>
 <!-- PAR KAITLYN NIELSEN -->
+
 
