--- a/poeme.html
+++ b/poeme.html
@@ -17,7 +17,7 @@
 		<center>
 			<p>Bienvenu à ma page poème. Pour naviguer entre les pages, cliquez les liens si-dessu<p>
 			<h1>POÈME</h1>
-			<p style="font-family: Courier New, monospace;">Source:</b><a target="_blank" href="https://medium.com/@EmEmbarty/31-of-the-best-and-most-famous-short-classic-poems-of-all-time-e445986e6dfu">Medium - Still I Rise par Maya Angelou</a></p>
+			<p style="font-family: Courier New, monospace;">Source:</b><a target="_blank" href="https://www.poetryfoundation.org/poems/46446/still-i-rise">Still I Rise par Maya Angelou</a></p>
 		</center>
 		<table>
 			<tr>
@@ -25,7 +25,7 @@
 					<img src="images/ma.jpg" alt="Still I Rise - Maya Angelou" width="200"/> <!--https://tokillabloggingbird96286054.wordpress.com/2018/11/27/still-i-rise/-->
 				</td>
 				<td>
-					<div class="joli" style="text-align: center">
+					<div class="joli">
 						<h3> “Still I Rise” </h3>
 						You may write me down in history<br>With your bitter, twisted lies,<br>You may tread me in the very dirt
 						<br>But still, like dust, I’ll rise.<br>Does my sassiness upset you?<br>Why are you beset with gloom?
@@ -47,4 +47,5 @@
 		</table>
 	</body>
 </html>
+
 
