--- a/poeme.html
+++ b/poeme.html
@@ -25,7 +25,7 @@
 					<img src="images/ma.jpg" alt="Still I Rise - Maya Angelou" width="200"/> <!--https://tokillabloggingbird96286054.wordpress.com/2018/11/27/still-i-rise/-->
 				</td>
 				<td>
-					<div class="joli" style="text-align: center;">
+					<div class="joli" style="text-align: left;">
 						<h3> “Still I Rise” </h3>
 						You may write me down in history<br>With your bitter, twisted lies,<br>You may tread me in the very dirt<br>But still, like dust, I’ll rise.
 						<br>
@@ -51,6 +51,7 @@
 		</table>
 	</body>
 </html>
+
 
 
 
