--- a/poeme.html
+++ b/poeme.html
@@ -19,7 +19,7 @@
 			<h1>POÈME</h1>
 			<p style="font-family: Courier New, monospace;">Source:</b><a target="_blank" href="https://www.poetryfoundation.org/poems/46446/still-i-rise">Still I Rise par Maya Angelou</a></p>
 		</center>
-		<table>
+		<table style= "width:100% ;">
 			<tr>
 				<td>
 					<img src="images/ma.jpg" alt="Still I Rise - Maya Angelou" width="200"/> <!--https://tokillabloggingbird96286054.wordpress.com/2018/11/27/still-i-rise/-->
@@ -51,6 +51,7 @@
 		</table>
 	</body>
 </html>
+
 
 
 
