--- a/poeme.html
+++ b/poeme.html
@@ -19,12 +19,13 @@
 			<h1>POÈME</h1>
 			<p style="font-family: Courier New, monospace;">Source:</b><a target="_blank" href="https://www.poetryfoundation.org/poems/46446/still-i-rise">Still I Rise par Maya Angelou</a></p>
 		</center>
-		<table style= "width:100% ;">
+		<center>
+		<table style="width: 80%;">
 			<tr>
 				<td>
 					<img src="images/ma.jpg" alt="Still I Rise - Maya Angelou" width="200"/> <!--https://tokillabloggingbird96286054.wordpress.com/2018/11/27/still-i-rise/-->
 				</td>
-				<td>
+				<td style="width: 55%;">
 					<div class="joli" style="text-align: left;">
 						<h3> “Still I Rise” </h3>
 						You may write me down in history<br>With your bitter, twisted lies,<br>You may tread me in the very dirt<br>But still, like dust, I’ll rise.
@@ -49,8 +50,10 @@
 				</td>
 			</tr>
 		</table>
+		</center>
 	</body>
 </html>
+
 
 
 
