--- a/poeme.html
+++ b/poeme.html
@@ -1,61 +1,69 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Poeme</title>
-		<link rel="stylesheet" href="poemestyle.css">	
-	</head>
-	<body>
-		<center><h1><b>Cours ICS3U - Génie informatique</b></h1></center>
-		<center><h2>Mon portfolio web<h2></center>
-		<center><p style="font-size: 18 px;">MES PAGES HTML:</p></center> <!-- Source: https://www.w3schools.com/tags/tag_font.asp -->
-	  	<ul>
-	  		<li><a target="_blank" href="poeme.html">POÈME</a>
-	  		<li><a target="_blank" href="voyage.html">VOYAGE DE RÊVE</a>
-	  		<li><a target="_blank" href="biographie.html">BIOGRAPHIE</a>
-	  	</ul>
-		<center>
-			<p>Bienvenu à ma page poème. Pour naviguer entre les pages, cliquez les liens si-dessu<p>
-			<h1>POÈME</h1>
-			<p style="font-family: Courier New, monospace;">Source:</b><a target="_blank" href="https://www.poetryfoundation.org/poems/46446/still-i-rise">Still I Rise par Maya Angelou</a></p>
-		</center>
-		<center>
-		<table style="width: 80%;">
-			<tr>
-				<td>
-					<img src="images/ma.jpg" alt="Still I Rise - Maya Angelou" width="200"/> <!--https://tokillabloggingbird96286054.wordpress.com/2018/11/27/still-i-rise/-->
-				</td>
-				<td style="width: 55%;">
-					<div class="joli" style="text-align: left;">
-						<h3> “Still I Rise” </h3>
-						You may write me down in history<br>With your bitter, twisted lies,<br>You may tread me in the very dirt<br>But still, like dust, I’ll rise.
-						<br>
-						<br>Does my sassiness upset you?<br>Why are you beset with gloom?<br>’Cause I walk like I’ve got oil wells<br>Pumping in my living room.
-						<br>
-						<br>Just like moons and like suns,<br>With the certainty of tides,<br>Just like hopes springing high,<br>Still I’ll rise.
-						<br>
-						<br>Did you want to see me broken?<br>Bowed head and lowered eyes?<br>Shoulders falling down like teardrops.<br>Weakened by my soulful cries.
-						<br>
-						<br>Dos my haughtiness offend you?<br>Don’t you take it awful hard<br>’Cause I laugh like I’ve got gold mines<br>Diggin’ in my own back yard.
-						<br>
-						<br>You may shoot me with your words,<br>You may cut me with your eyes,<br>You may kill me with your hatefulness,<br>But still, like air, I’ll rise.
-						<br>
-						<br>Does my sexiness upset you?<br>Does it come as a surprise<br>That I dance like I’ve got diamonds<br>At the meeting of my thighs?
-						<br>
-						<br>Out of the huts of history’s shame<br>I rise<br>Up from a past that’s rooted in pain<br>I rise<br>I’m a black ocean, leaping and wide,<br>Welling and swelling I bear in the tide.
-						<br>
-						<br>Leaving behind nights of terror and fear<br>I rise<br>Into a daybreak that’s wondrously clear<br>I rise<br>Bringing the gifts that my ancestors gave,<br>I am the dream and the hope of the slave.<br>I rise<br>I rise<br>I rise.
-						<p><i>—Maya Angelou</i></p>
-					</div>
-				</td>
-			</tr>
-		</table>
-		</center>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <title>Poeme</title>
+    <link rel="stylesheet" href="poemestyle.css">
+</head>
+
+<body>
+    <center>
+        <h1><b>Cours ICS3U - Génie informatique</b></h1>
+    </center>
+    <center>
+        <h2>Mon portfolio web<h2>
+    </center>
+    <center>
+        <p style="font-size: 18 px;">MES PAGES HTML:</p>
+    </center> <!-- Source: https://www.w3schools.com/tags/tag_font.asp -->
+    <ul>
+      	<br>
+        <li><a target="_blank" href="poeme.html">POÈME</a>
+        <br>
+        <li><a target="_blank" href="voyage.html">VOYAGE DE RÊVE</a>
+        <br>
+        <li><a target="_blank" href="biographie.html">BIOGRAPHIE</a>
+        <br>
+    </ul>
+    <center>
+        <p>Bienvenu à ma page poème. Pour naviguer entre les pages, cliquez les liens si-dessu
+        <p>
+        <h1>POÈME</h1>
+        <p style="font-family: Courier New, monospace;">Source:</b><a target="_blank" href="https://www.poetryfoundation.org/poems/46446/still-i-rise">Still I Rise par Maya Angelou</a></p>
+    </center>
+    <center>
+        <table style="width: 80%;">
+            <tr>
+                <td style="width: 65%;">
+                    <div class="joli" style="text-align: left;">
+                        <p><b>“Still I Rise”</b>
+                      	<br>
+                        <br>You may write me down in history<br>With your bitter, twisted lies,<br>You may tread me in the very dirt<br>But still, like dust, I’ll rise.
+                        <br>
+                        <br>Does my sassiness upset you?<br>Why are you beset with gloom?<br>’Cause I walk like I’ve got oil wells<br>Pumping in my living room.
+                        <br>
+                        <br>Just like moons and like suns,<br>With the certainty of tides,<br>Just like hopes springing high,<br>Still I’ll rise.
+                        <br>
+                        <br>Did you want to see me broken?<br>Bowed head and lowered eyes?<br>Shoulders falling down like teardrops.<br>Weakened by my soulful cries.
+                        <br>
+                        <br>Dos my haughtiness offend you?<br>Don’t you take it awful hard<br>’Cause I laugh like I’ve got gold mines<br>Diggin’ in my own back yard.
+                        <br>
+                        <br>You may shoot me with your words,<br>You may cut me with your eyes,<br>You may kill me with your hatefulness,<br>But still, like air, I’ll rise.
+                        <br>
+                        <br>Does my sexiness upset you?<br>Does it come as a surprise<br>That I dance like I’ve got diamonds<br>At the meeting of my thighs?
+                        <br>
+                        <br>Out of the huts of history’s shame<br>I rise<br>Up from a past that’s rooted in pain<br>I rise<br>I’m a black ocean, leaping and wide,<br>Welling and swelling I bear in the tide.
+                        <br>
+                        <br>Leaving behind nights of terror and fear<br>I rise<br>Into a daybreak that’s wondrously clear<br>I rise<br>Bringing the gifts that my ancestors gave,<br>I am the dream and the hope of the slave.<br>I rise<br>I rise<br>I rise.<br>
+                        <br><i>—Maya Angelou</i><br></p>
+                    </div>
+                </td>
+                <td style="width: 35%; vertical-align: middle; text-align: center">
+                    <img src="ma.jpeg" alt="Still I Rise - Maya Angelou" width="300 px"/>
+                    <!--https://tokillabloggingbird96286054.wordpress.com/2018/11/27/still-i-rise/-->
+                </td>
+            </tr>
+        </table>
+    </center>
+</body>
 </html>
-
-
-
-
-
-
