FINIAL index.html

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
 		<center><h2>Mon portfolio web<h2></center>
 		<center><p style="font-family: Courier New, monospace;font-size: 24px;">MES PAGES HTML:</p></center> <!-- Source: https://www.w3schools.com/tags/tag_font.asp -->
 		<ul>
-			<li><a target="_blank" href="poeme.html">POÈME</a>
-			<li><a target="_blank" href="voyage.html">VOYAGE DE RÊVE</a>
-			<li><a target="_blank" href="biographie.html">BIOGRAPHIE</a>
+			<li><a href="poeme.html">POÈME</a>
+			<li><a href="voyage.html">VOYAGE DE RÊVE</a>
+			<li><a href="biographie.html">BIOGRAPHIE</a>
 		</ul>
 		<center><p>Bienvenu à mon portfolio web. Pour naviguer entre les pages, cliquez les liens si-dessu<p></center>
+	</body>
+	<html>
+	<!-- PAR KAITLYN NIELSEN -->
