--- a/biographie.html
+++ b/biographie.html
@@ -16,9 +16,9 @@
 		<center><h2>Mon portfolio web<h2></center>
 		<center><p style="font-size: 18 px;">MES PAGES HTML:</p></center> <!-- Source: https://www.w3schools.com/tags/tag_font.asp -->
 		<ul>
+			<li><a href="index.html">ACCUEIL</a>
 			<li><a href="poeme.html">POÈME</a>
 			<li><a href="voyage.html">VOYAGE DE RÊVE</a>
-			<li><a href="biographie.html">BIOGRAPHIE</a>
 		</ul>
 		<center><h1>Ma biographie</h1></center>
 		<center><h3>MENU:</h3></center>
@@ -101,3 +101,4 @@
 	</body>
 <html>
 <!-- PAR KAITLYN NIELSEN -->
+
