FINAL poeme.html

--- a/poeme.html
+++ b/poeme.html
@@ -20,7 +20,7 @@
         <p style="font-size: 18 px;">MES PAGES HTML:</p>
     </center> <!-- Source: https://www.w3schools.com/tags/tag_font.asp -->
     <ul>
-        <li><a href="poeme.html">POÈME</a>
+        <li><a href="index.html">ACCUEIL</a>
 		<li><a href="voyage.html">VOYAGE DE RÊVE</a>
 		<li><a href="biographie.html">BIOGRAPHIE</a>
     </ul>
@@ -69,4 +69,5 @@
 </body>
 </html>
 <!-- PAR KAITLYN NIELSEN -->
+
 
