--- a/poeme.html
+++ b/poeme.html
@@ -8,7 +8,7 @@
 		a[href="#retour"] {
 			text-decoration: none; <!-- Removes the underline -->
 			color: black; <!-- Sets the link color to black -->
-		}
+		} <!-- source:https://www.w3schools.com/css/css_link.asp -->
 	</style>
 </head>
 <body>
@@ -69,5 +69,6 @@
 </body>
 </html>
 <!-- PAR KAITLYN NIELSEN -->
+
 
 
