FINAL biographie.html

--- a/biographie.html
+++ b/biographie.html
@@ -8,7 +8,7 @@
 			a[href="#retour"] {
 				text-decoration: none; <!-- Removes the underline -->
 				color: black; <!-- Sets the link color to black -->
-			} <!-- source:https://www.w3schools.com/css/css_link.asp -->
+			}
 		</style>
 	</head>
 	<body>
@@ -43,16 +43,23 @@
 				</table>
 			</div>
 		<a name="pref"><h3>MES LIENS PRÉFÉRÉS:</h3></a>
-		<ol>
-			<li><a target="_blank" href="https://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Accueil_principal">Wikipedia</a>
-			<li><a target="_blank" href="https://snakegame.org/">Snake Game</a>
-			<li><a target="_blank" href="https://www.remove.bg/fr">Removebg</a>
-			<li><a target="_blank" href="https://www.w3schools.com/">w3schools</a>
-		</ol>
+		<table style="border-spacing: 30px 30px;">
+			<tr>
+				<td><a target="_blank" href="https://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Accueil_principal">Wikipedia</a></td>
+				<td><a target="_blank" href="https://snakegame.org/">Snake Game</a></td>
+			</tr>
+			<tr>
+				<td><a target="_blank" href="https://www.remove.bg/fr">Removebg</a></td>
+				<td><a target="_blank" href="https://www.w3schools.com/">w3schools</a></td>
+			</tr>
+			</tr>
+				<td><a target="_blank" href="https://weather.com/en-CA/weather/today/l/584018bec07ce9573837c14fa59da031fa6fcdeb1c3c9e3b2b27cb79ce254b5a">The Weather Channel</a></td>
+				<td><a target="_blank" href="https://www.netflix.com/ca-fr/">Netflix</a></td>
+			</tr>
+		</table>
+		
 		<a name="ct"><h3>MES COMPÉTENCES TECHNOLOGIQUES:</h3></a>
-		<div class="joli" style="width: 80%;">
-			<br>
-			<table>
+			<table border=1>
 				<thead>
 					<th>Compétence technologique</th>
 					<th>Débutant</th>
@@ -89,10 +96,22 @@
 						<td>x</td>
 						<td> </td>
 					</tr>
+					<tr>
+						<td>Navigation Windows</td>
+						<td>x</td>
+						<td> </td>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td>Navigation Chrome</td>
+						<td> </td>
+						<td> </td>
+						<td> </td>
+						<td>x</td>
+					</tr>
 				</tbody>
 			</table>
-		<br>
-		</div>
 		<br>
 		<div class="return" style="width: 10%;">
 			<p><a href="#retour">Retour en haut</a></p>
