FINAL index.html

--- a/index.html
+++ b/index.html
@@ -48,8 +48,15 @@
 			<li><a href="voyage.html">VOYAGE DE RÊVE</a>
 			<li><a href="biographie.html">BIOGRAPHIE</a>
 		</ul>
-		<center><p>Bienvenu à mon portfolio web. Pour naviguer entre les pages, cliquez les liens si-dessu<p></center>
+		<center>
+		<p>Bienvenue à mon portfolio web. Pour naviguer entre les pages, cliquez les liens dans le menu ci-dessus<p>
+		<h3>Poème</h3>
+		<p>Cette page présente un poème qui me touche par Maya Angelou: Still I Rise. Elle parle de résilience et de respect pour soi-même</p>
+		<h3>Voyage de rêve</h3>
+		<p>Cette page présente mon voyage parfait si j'avais la chance de voyager n'importe où au monde</p>
+		<h3>Biographie</h3>
+		<p>La dernière addition à mon site-web est une biographie personnelle qui me présente un peu.</p>
+		</center>
 	</body>
-	<html>
-	<!-- PAR KAITLYN NIELSEN -->
-
+<html>
+<!-- PAR KAITLYN NIELSEN -->
