FINAL biographie.html

--- a/biographie.html
+++ b/biographie.html
@@ -61,11 +61,16 @@
 		<a name="ct"><h3>MES COMPÉTENCES TECHNOLOGIQUES:</h3></a>
 			<table border=1>
 				<thead>
-					<th>Compétence technologique</th>
-					<th>Débutant</th>
-					<th>Compétant</th>
-					<th>Expert</th>
-					<th>Maître</th>
+					<tr>
+						<th rowspan="2">Compétence technologique</th>
+						<th colspan="4">Niveau</th>
+					</tr>
+					<tr>
+						<th>Débutant</th>
+						<th>Compétant</th>
+						<th>Expert</th>
+						<th>Maître</th>
+					</tr>
 				</thead>
 				<tbody>
 					<tr>
@@ -120,5 +125,6 @@
 	</body>
 <html>
 <!-- PAR KAITLYN NIELSEN -->
+
 
 
